Create requests and responses for message creation

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -10,5 +10,17 @@
     <servlet-mapping>
         <servlet-name>spring-dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
+        <url-pattern>/test</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <description></description>
+        <display-name>ReceiveMessagesServlet</display-name>
+        <servlet-name>ReceiveMessagesServlet</servlet-name>
+        <servlet-class>main.java.service.ReceiveMessagesServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ReceiveMessagesServlet</servlet-name>
+        <url-pattern>/ReceiveMessagesServlet</url-pattern>
     </servlet-mapping>
 </web-app>
