--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>spring-web</artifactId>
             <version>4.1.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>src</sourceDirectory>
