--- a/pom.xml
+++ b/pom.xml
@@ -46,10 +46,19 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <version>1.3</version>
         </dependency>
     </dependencies>
     <build>
+        <!--<resources>-->
+            <!--<resource>-->
+                <!--<directory>src/main/resources</directory>-->
+                <!--<filtering>true</filtering>-->
+                <!--<includes>-->
+                    <!--<include>spring-config.xml</include>-->
+                <!--</includes>-->
+            <!--</resource>-->
+        <!--</resources>-->
         <sourceDirectory>src</sourceDirectory>
         <plugins>
             <plugin>
