--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 
     <groupId>FSboard</groupId>
     <artifactId>FSboard</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+    <version>1.0</version>
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -65,7 +66,6 @@
                 <directory>src</directory>
                 <filtering>true</filtering>
                 <includes>
-                    <include>/main/resources/spring-config.xml</include>
                     <include>test-spring-config.xml</include>
                 </includes>
             </resource>
@@ -78,6 +78,18 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <webResources>
+                        <resource>
+                            <directory>web</directory>
+                        </resource>
+                    </webResources>
                 </configuration>
             </plugin>
         </plugins>
